improve tooltips